一覧に戻るのクラス名変更

--- a/hostDetails.html
+++ b/hostDetails.html
@@ -51,7 +51,7 @@
     <div class="map-area">
       <p>ここに地図が入ります。</p>
     </div>
-    <a href="index.html" class="return-icon"><i class="fa-solid fa-chevron-left"></i>一覧に戻る</a>
+    <a href="index.html" class="return-icon-host"><i class="fa-solid fa-chevron-left"></i>一覧に戻る</a>
   </div>
      <!--サイドバー-->
      <div class="sidebar">
